objects/spExams__User_Exam_Question__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Is_Correct__c</fullName>
        <label>Is Correct</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_Answers__c</fullName>
        <label>No of Answers</label>
        <summaryForeignKey>spExams__User_Exam_Answer__c.spExams__User_Exam_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__No_of_Correct_Answers__c</fullName>
        <label>No of Correct Answers</label>
        <summaryFilterItems>
            <field>spExams__User_Exam_Answer__c.spExams__Is_Correct__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </summaryFilterItems>
        <summaryForeignKey>spExams__User_Exam_Answer__c.spExams__User_Exam_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>spExams__Question_Type__c</fullName>
        <formula>TEXT(spExams__Question__r.spExams__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>spExams__Question__c</referenceTo>
        <relationshipLabel>User Exam Questions</relationshipLabel>
        <relationshipName>User_Exam_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>spExams__Review_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>spExams__User_Exam__c</fullName>
        <label>User Exam</label>
        <referenceTo>spExams__User_Exam__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>User_Exam_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Exam Question</label>
    <nameField>
        <displayFormat>UEQ-{0000000}</displayFormat>
        <label>User Exam Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Exam Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>